--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -10,7 +10,7 @@ body{
     margin: 0 auto;
 }
 .cabecalho {
-    color: red;
+    color: white;
     font-family: Aldrich;
     font-size: 60px;
     padding: 5px 300px 5px 300px;
